--- a/UnityEL.csproj
+++ b/UnityEL.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\Scripts\UnityEL\ExpressionImpl.cs" />
     <Compile Include="Assets\Scripts\UnityEL\FunctionResolver.cs" />
     <Compile Include="Assets\Scripts\UnityEL\MemberFunctionResolver.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\NoSuchFunctionException.cs" />
     <Compile Include="Assets\Scripts\UnityEL\NoSuchPropertyException.cs" />
     <Compile Include="Assets\Scripts\UnityEL\ParserException.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\BinaryTokenParser.cs" />
@@ -77,17 +78,21 @@
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\ConditionalOperatorParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\DecimalParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\DivisionParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\ExistsParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\ExponentParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\FunctionParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\GroupParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\HexIntegerParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\IdentifierParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\IntegerParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\IsEmptyParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\IsNotEmptyParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\IsNotParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\IsParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\KeyedAccessParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\ModulusParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\MultiplicationParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\NotExistsParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\NotParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\NullCoalesceParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\NullParser.cs" />
@@ -103,22 +108,27 @@
     <Compile Include="Assets\Scripts\UnityEL\Parsers\WordTokenParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\BinaryToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\CloseableToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\ExistsSupport.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\AdditionToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\AndToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\BooleanToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\ConditionalOperatorToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\DecimalToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\DivisionToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\ExistsToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\ExponentToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\FunctionToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\GroupToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\IdentifierToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\IntegerToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\IsEmptyToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\IsNotEmptyToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\IsNotToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\IsToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\KeyedAccessToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\ModulusToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\MultiplicationToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\NotExistsToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\NotToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\NullCoalesceToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\NullToken.cs" />
