Added +=, /=, **=, %=, *=, -=, and = tokens

--- a/EditMode.csproj
+++ b/EditMode.csproj
@@ -62,15 +62,19 @@
   <ItemGroup>
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\BaseCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\CombinedCompilerTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\AddAndAssignTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\AdditionTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\AndTokenCompilerTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\AssignTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\BitwiseAndTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\BitwiseOrTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\ComplementTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\ConditionalOperatorCompilerTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\DivideAndAssignTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\DivisionTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\EqualsTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\ExistsTokenCompilerTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\ExponentAndAssignTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\ExponentTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\FunctionTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\GreaterThanOrEqualsTokenCompilerTest.cs" />
@@ -84,8 +88,10 @@
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\KeyedAccessTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\LessThanOrEqualsTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\LessThanTokenCompilerTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\ModulusAndAssignTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\ModulusTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\MultiplicationTokenCompilerTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\MultiplyAndAssignTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\NotEqualsTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\NotExistsTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\NotTokenCompilerTest.cs" />
@@ -94,13 +100,16 @@
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\PropertyAccessTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\ShiftLeftTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\ShiftRightTokenCompilerTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\SubtractAndAssignTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\SubtractionTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\UnaryMinusTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Compiler\Tokens\XorTokenCompilerTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\BaseParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\BinaryParserTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\AddAndAssignParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\AdditionParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\AndParserTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\AssignParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\BinaryIntegerParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\BitwiseAndParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\BitwiseOrParserTest.cs" />
@@ -109,9 +118,11 @@
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\ComplementParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\ConditionalOperatorParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\DecimalParserTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\DivideAndAssignParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\DivisionParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\EqualsParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\ExistsParserTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\ExponentAndAssignParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\ExponentParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\FunctionParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\GreaterThanOrEqualsParserTest.cs" />
@@ -127,8 +138,10 @@
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\KeyedAccessParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\LessThanOrEqualsParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\LessThanParserTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\ModulusAndAssignParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\ModulusParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\MultiplicationParserTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\MultiplyAndAssignParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\NotEqualsParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\NotExistsParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\NotParserTest.cs" />
@@ -139,21 +152,26 @@
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\ShiftLeftParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\ShiftRightParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\StringParserTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\SubtractAndAssignParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\SubtractionParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\UnaryMinusParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\Impls\XorParserTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Parsers\UnaryParserTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\AddAndAssignTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\AdditionTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\AndTokenTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\AssignTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\BitwiseAndTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\BitwiseOrTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\BooleanTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\ComplementTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\ConditionalOperatorTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\DecimalTokenTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\DivideAndAssignTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\DivisionTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\EqualsTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\ExistsTokenTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\ExponentAndAssignTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\ExponentTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\FunctionTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\GreaterThanOrEqualsTokenTest.cs" />
@@ -168,8 +186,10 @@
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\KeyedAccessTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\LessThanOrEqualsTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\LessThanTokenTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\ModulusAndAssignTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\ModulusTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\MultiplicationTokenTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\MultiplyAndAssignTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\NotEqualsTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\NotExistsTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\NotTokenTest.cs" />
@@ -180,6 +200,7 @@
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\ShiftLeftTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\ShiftRightTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\StringTokenTest.cs" />
+    <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\SubtractAndAssignTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\SubtractionTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\UnaryMinusTokenTest.cs" />
     <Compile Include="Assets\Tests\EditMode\UnityEL\Tokens\Impls\XorTokenTest.cs" />
