--- a/UnityEL.csproj
+++ b/UnityEL.csproj
@@ -70,8 +70,10 @@
     <Compile Include="Assets\Scripts\UnityEL\ParserException.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\BinaryTokenParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\DoubleCharacterParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\AddAndAssignParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\AdditionParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\AndParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\AssignParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\BinaryIntegerParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\BitwiseAndParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\BitwiseOrParser.cs" />
@@ -80,9 +82,11 @@
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\ComplementParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\ConditionalOperatorParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\DecimalParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\DivideAndAssignParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\DivisionParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\EqualsParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\ExistsParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\ExponentAndAssignParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\ExponentParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\FunctionParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\GreaterThanOrEqualsParser.cs" />
@@ -98,8 +102,10 @@
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\KeyedAccessParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\LessThanOrEqualsParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\LessThanParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\ModulusAndAssignParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\ModulusParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\MultiplicationParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\MultiplyAndAssignParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\NotEqualsParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\NotExistsParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\NotParser.cs" />
@@ -110,6 +116,7 @@
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\ShiftLeftParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\ShiftRightParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\StringParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\SubtractAndAssignParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\SubtractionParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\UnaryMinusParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\Impls\XorParser.cs" />
@@ -118,20 +125,25 @@
     <Compile Include="Assets\Scripts\UnityEL\Parsers\TokenParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\UnaryTokenParser.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Parsers\WordTokenParser.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\AssignableToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\BinaryToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\CloseableToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\ExistsSupport.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\AddAndAssignToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\AdditionToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\AndToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\AssignToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\BitwiseAndToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\BitwiseOrToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\BooleanToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\ComplementToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\ConditionalOperatorToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\DecimalToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\DivideAndAssignToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\DivisionToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\EqualsToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\ExistsToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\ExponentAndAssignToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\ExponentToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\FunctionToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\GreaterThanOrEqualsToken.cs" />
@@ -146,8 +158,10 @@
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\KeyedAccessToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\LessThanOrEqualsToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\LessThanToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\ModulusAndAssignToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\ModulusToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\MultiplicationToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\MultiplyAndAssignToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\NotEqualsToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\NotExistsToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\NotToken.cs" />
@@ -158,6 +172,7 @@
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\ShiftLeftToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\ShiftRightToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\StringToken.cs" />
+    <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\SubtractAndAssignToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\SubtractionToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\UnaryMinusToken.cs" />
     <Compile Include="Assets\Scripts\UnityEL\Tokens\Impls\XorToken.cs" />
